--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="GOOGLE_MAPS_API_KEY">AIzaSyCZt9urQb8cYmTWM21w6ZfnbUyHkJZRxOc</string>
     <string name="mapViewString">This app is currently limited in this region due to the lack of the smog sensors in rest of the regions.</string>
     <string name="AIRLY_API_KEY">smD7lvjAAYAmArkXDcACunq0p0OldmTT</string>
+    <string name="smogButtonText">Get my SMOG data quick!</string>
     <string-array name="cities_array">
         <item>Warsaw</item>
 
