--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,10 +5,24 @@
     <string name="smogButtonDescripition">SMOG</string>
     <string name="runButtonDescripition">RUN</string>
     <string name="title_activity_welcome">NoSmogRunner</string>
-    <string name="GOOGLE_MAPS_API_KEY">AIzaSyCZt9urQb8cYmTWM21w6ZfnbUyHkJZRxOc</string>
+    <string name="GOOGLE_MAPS_API_KEY"> AIzaSyCkfilaYmGTn34wncNS0Yu-OWK8pnOZkXs </string>
     <string name="mapViewString">This app is currently limited in this region due to the lack of the smog sensors in rest of the regions.</string>
     <string name="AIRLY_API_KEY">smD7lvjAAYAmArkXDcACunq0p0OldmTT</string>
+
+
+
     <string name="smogButtonText">Get my SMOG data quick!</string>
+    <string name="cityText">Warsaw temperature:</string>
+    <string name="CAQIText">CAQI standard value:</string>
+    <string name="CAQILevelText">Smog level:</string>
+    <string name="DescriptionText">Description:</string>
+    <string name="pm1Text">PM 1 level:</string>
+    <string name="pm25Text">PM 25 level:</string>
+    <string name="pm10Text">PM 10 level:</string>
+    <string name="adviceText">Advice:</string>
+    <string name="smogTitle">Warsaw smog measurements:</string>
+
+
     <string-array name="cities_array">
         <item>Warsaw</item>
 
