Routes are drawn but it is probably a dead end...

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,5 +27,9 @@
         <item>Warsaw</item>
 
     </string-array>
+    <string-array name="activities_array">
+        <item>walking</item>
+        <item>cycling</item>
+    </string-array>
 
 </resources>
